WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232429
AudioMediaStreamTrackRendererUnit::render should handle the case of failing to pull samples from the first source
https://bugs.webkit.org/show_bug.cgi?id=232429
Summary
AudioMediaStreamTrackRendererUnit::render should handle the case of failing t...
youenn fablet
Reported
2021-10-28 02:28:34 PDT
AudioMediaStreamTrackRendererUnit::render should handle the case of failing to pull samples from the first source
Attachments
Patch
(2.29 KB, patch)
2021-10-28 03:31 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-10-28 03:31:24 PDT
Created
attachment 442687
[details]
Patch
EWS
Comment 2
2021-10-29 02:15:23 PDT
Committed
r285022
(
243666@main
): <
https://commits.webkit.org/243666@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442687
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-29 02:16:18 PDT
<
rdar://problem/84801169
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug