AudioMediaStreamTrackRendererUnit::render should handle the case of failing to pull samples from the first source https://bugs.webkit.org/show_bug.cgi?id=232429

Reviewed by Eric Carlson.

In case we fail to pull samples from the first source, we should copy the data of the second source,
and so on until we actually copy data. Then we can start mixing data.
In case all pulls fail, we now output silence.

* platform/mediastream/cocoa/AudioMediaStreamTrackRendererUnit.cpp:



Canonical link: https://commits.webkit.org/243666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285022 268f45cc-cd09-0410-ab3c-d52691b4dbfc